# lmfit_global

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lmfit-global-ci.yml
examples/: faster.ipynb  fit_with_inequality_01.ipynb  lg_model_gaussian.ipynb  lg_model_two_components.ipynb  lgfit_model_gaussian.ipynb  lgfit_model_two_components.ipynb  lgfit_multi_components_datasets.ipynb  lgfit_multi_datasets.ipynb  lgfit_stepmodel.ipynb  lgfit_with_inequality.ipynb  model_with_iter_callback_01.ipynb  muSR_gaussian_distributions_01.ipynb  multi_components_01.ipynb  multi_datasets_01.ipynb  multi_datasets_01.py  multi_datasets_bpp_01.ipynb  multi_datasets_muSRoscillations_01.ipynb  stepmodel_01.ipynb
examples/data/: dario_unrlx_calcdipolar_field.npz
lmfit-global/examples/: __init__.ipynb
lmfit-global/tests/: test_example01.ipynb  test_lmfit_global.ipynb  test_lmfit_global.py
lmfit_global/: __init__.ipynb  __init__.py  globutils.ipynb  globutils.py  lmfit_global.ipynb  lmfit_global.py  lmfit_global_cleaner.ipynb  lmfit_global_refactor.py  lmfit_global_v1.ipynb
lmfit_global/util/: __init__.py  io.py  lineshapes.py  parameters.ipynb  parameters.py  plotting.ipynb  reporting.ipynb  reporting.py  utils.ipynb  utils.py
lmfit_global/utils/: __init__.py  builders.py  io_utils.py  lineshapes.py  parameters.py  plotting.py  (+1 more)
tests/: test_data.ipynb  test_example01.ipynb  test_gaussian.py  test_imports.py  test_items_builder.py  test_lmfit_global.ipynb  test_lmfit_global.py  test_multi_components.py  test_multi_datasets.py  test_single_datasets.py
(+16 files in other folders)
